<resources>
    <string name="app_name"> Maze Game</string>
    <string name="title"> Maze Game</string>
    <string name="playbutton">Play </string>
    <string name="Aboutbttn">About </string>
    <string name="helpbttn">Help</string>
    <string name="noofmoves">number of moves :</string>
    <string name="img">imagedesc</string>
    <string name="quit">Quit</string>
    <string name="space">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="tweleve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="helptext">Arrange the numbers 1 to 8 in ascending order as shown in the below pattern.</string>
    <string name="helptext2">Arrange the numbers 1 to 15 in ascending order as shown in the below pattern.</string>
    <string name="feedback">feedback</string>
    <string-array name="game">
        <item>3*3 puzzle game</item>
        <item> 4*4 puzzle game</item>
    </string-array>

</resources>
