<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shruthi.project.Play2">

    <AbsoluteLayout
        android:id="@+id/absoluteLayout"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        android:layout_weight="0.08"
        android:paddingBottom="@dimen/padding"
        android:paddingLeft="@dimen/layoutpadding"
        android:paddingTop="@dimen/padding">


        <Button
            android:id="@+id/Button15"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="290dp"
            android:layout_y="290dp"
            android:text="@string/fifteen"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button14"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="195dp"
            android:layout_y="290dp"
            android:text="@string/fourteen"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="100dp"
            android:layout_y="290dp"
            android:text="@string/thirteen"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="5dp"
            android:layout_y="290dp"
            android:text="@string/tweleve"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="290dp"
            android:layout_y="195dp"
            android:text="@string/eleven"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="195dp"
            android:layout_y="195dp"
            android:text="@string/ten"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="100dp"
            android:layout_y="195dp"
            android:text="@string/nine"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="5dp"
            android:layout_y="195dp"
            android:text="@string/eight"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="290dp"
            android:layout_y="100dp"
            android:text="@string/seven"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="195dp"
            android:layout_y="100dp"
            android:text="@string/six"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="100dp"
            android:layout_y="100dp"
            android:text="@string/five"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="5dp"
            android:layout_y="100dp"
            android:text="@string/four"
            android:textSize="@dimen/bttnsize" />

        <Button
            android:id="@+id/Button3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="290dp"
            android:layout_y="5dp"
            android:text="@string/three"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="195dp"
            android:layout_y="5dp"
            android:text="@string/two"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="100dp"
            android:layout_y="5dp"
            android:text="@string/one"
            android:textSize="@dimen/btn" />

        <Button
            android:id="@+id/Button0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_x="5dp"
            android:layout_y="5dp"
            android:background="@android:color/black"
            android:text="@string/space"
            android:textSize="@dimen/bttnsize" />
    </AbsoluteLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/scoreid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:paddingLeft="@dimen/padding"
            android:text="@string/noofmoves"
            android:textColor="@android:color/black"
            android:textSize="@dimen/btn" />

        <TextView
            android:id="@+id/scoretxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/absoluteLayout"
            android:layout_weight="0.24"
            android:paddingLeft="@dimen/padding"
            android:text="@string/space"
            android:textColor="@android:color/black"
            android:textSize="@dimen/btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/Moveid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:paddingLeft="@dimen/padding"
        android:text="move :"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:paddingLeft="@dimen/padding"
            android:text="@string/quit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/bttnsize" />

        <Button
            android:id="@+id/helpbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:text="@string/helpbttn"
            android:textColor="@android:color/black"
            android:textSize="@dimen/btn" />
    </LinearLayout>


</LinearLayout>
